<resources>
    <string name="app_name">Playing</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="dummy_text">The OK button is now constrained vertically to remain lined up with the baseline of the Cancel button. It was constrained to the bottom edge of the baseline, and that allowed me to drag it up and down the screen - all that changed was the distance from the bottom of the layout. Now, though, it is constrained to the Cancel button and if I try to drag it up or down nothing happens. I can still drag it left or right, which just changes its margin from the Cancel button, but it can no longer be moved up or down.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="image_of_a_ball">Image of a ball</string>
    <string name="button">Button</string>
</resources>
