<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/constraint_layout"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:id="@+id/textView2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:text="@string/dummy_text"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"
        android:scrollbars="vertical"
        android:scrollIndicators="right|end"
        tools:targetApi="m"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="93dp"
        android:layout_height="53dp"
        android:id="@+id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:text="@string/ok"
        android:layout_width="93dp"
        android:layout_height="53dp"
        android:id="@+id/button3"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ball_100x100"
        android:id="@+id/imageView2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/image_of_a_ball"/>
</android.support.constraint.ConstraintLayout>